gcc/testsuite/rust/rustc/ui/parser/issues/issue-101477-let_dg.rs
//@ run-rustfix

fn main() {
    let x == 2; // { dg-error "" "" { target *-*-* } }
    println!("x: {}", x)
}

